feat: complete admin dashboard + auth + UI fixes
Backend:
- Add AdminDashboardServlet with real user stats, blood group chart, recent activity
- Add RegisterServlet with fullName→first/last split, role enum mapping
- Add AppContextListener for Hibernate SessionFactory lifecycle (shutdown on undeploy)
- Fix UserListServlet: add admin auth check + UTF-8 encoding
- Fix AuthService: lowercase email lookup, unified error messages (prevents user enumeration)
- Fix UserDAO: replace deprecated session.get() with session.find(), add countByBloodGroup(), findRecent()
- Fix UserDAO.delete(): add transaction.rollback() on missing user
- Fix UserService.updateUser(): add status null validation
- Fix LogoutServlet: clear JSESSIONID cookie + cache-control headers
- Fix LoginServlet, AddUserServlet, EditUserServlet: add UTF-8 encoding
- Add hibernate-c3p0 connection pool dependency + config
- Set Java source/target to 11 in maven-compiler-plugin

Frontend:
- Rewrite index.jsp to forward to login.jsp (or dashboard if logged in)
- Fix login.jsp: add missing main/container CSS, fix broken CSS comment, add registered banner
- Fix Register.jsp: add DOCTYPE, fix form action, remove e.preventDefault(), fix links with contextPath
- Fix adminDashboard.jsp: replace all static data with JSTL + real stats from servlet
- Fix adminManageUsers.jsp: fix JS single-quote XSS, wire delete modal properly
- Fix sidebar.jsp: dynamic active nav item, remove nested HTML wrappers
- Fix admintopbar.jsp: dynamic page title, remove nested HTML wrappers
- Fix footer.jsp & navbar.jsp: remove nested HTML wrappers, fix structure
- Fix web.xml: add RegisterServlet, AdminDashboardServlet, AppContextListener mappings